<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Aut_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageButton
        android:id="@+id/closeAutBtn"
        android:contentDescription="@string/login_page_close"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_close"
        app:layout_constraintEnd_toStartOf="@+id/uoeLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/transparent" />

    <android.support.v7.widget.CardView
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="164dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/trans_white">

            <EditText
                android:id="@+id/AutEmail"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="26dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/blue_cursor" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="244dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105">

        <RelativeLayout
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:background="@color/trans_white">

            <EditText
                android:id="@+id/AutPassword"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="47dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/blue_cursor" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/AutSignInBtn"
        android:layout_width="277dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="368dp"
        android:alpha="0.7"
        android:background="@drawable/button_shape2"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/AutSignUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/AutSignUpBtn"
        android:layout_width="255dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="424dp"
        android:background="@android:color/transparent"
        android:text="@string/sign_up_long"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/uoeLogo"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/uoelogo" />

    <ProgressBar
        android:id="@+id/progressLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AutSignUpBtn" />

</android.support.constraint.ConstraintLayout>