<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapboxMapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        mapbox:mapbox_cameraTargetLat="55.944"
        mapbox:mapbox_cameraTargetLng="-3.188396"
        mapbox:mapbox_cameraZoom="15"
        mapbox:mapbox_styleUrl="@string/mapbox_style_mapbox_streets">

    </com.mapbox.mapboxsdk.maps.MapView>

    <Button
        android:id="@+id/collectButton"
        android:layout_width="99dp"
        android:layout_height="76dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@mipmap/ic_hand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@android:color/white"
            android:layout_margin="4dp"
            android:clickable="true"
            android:focusable="true"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_add_black_24dp"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_myAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@android:color/white"
            android:layout_margin="4dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_account_balance_wallet_black_24dp"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_friendList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@android:color/white"
            android:layout_margin="4dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_people_black_24dp"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_alchemy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:tint="@android:color/white"
            app:fabSize="mini"
            app:srcCompat="@mipmap/ic_hexagram" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_addFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@android:color/white"
            android:layout_margin="4dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_person_add_black_24dp"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_helpPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@android:color/white"
            android:layout_margin="4dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_help_outline_black_24dp"
            />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>