<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScreenSocial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_no_title"
    tools:context=".SocialActivity">


    <TextView
        android:id="@+id/userEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/test_test_com"
        app:layout_constraintBottom_toTopOf="@+id/scrollScreenSocial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNickName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/userNickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:text="@string/lawrence"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/rank"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nameBtn"
        android:layout_width="17dp"
        android:layout_height="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/ic_edit_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/userNickName"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollScreenSocial"
        android:layout_width="0dp"
        android:layout_height="417dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664">

        <LinearLayout
            android:id="@+id/linearLayoutSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_dark"
                    android:gravity="center"
                    android:text="@string/user_rank" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@android:color/holo_orange_dark"
                    android:gravity="center"
                    android:text="@string/name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@android:color/holo_orange_dark"
                    android:gravity="center"
                    android:text="@string/gold_short" />

            </TableRow>

            <TableLayout
                android:id="@+id/friendList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="120dp">

            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/rankUpdateProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollScreenSocial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollScreenSocial"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>